# gachapy

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  pmd-ruleset.xml  setup.cfg  setup.py
.github/workflows/: cd.yml  codeql.yml  main.yml  pmd.yml
.semaphore/: pypi.yml  semaphore.yml
docs/: conf.py  gachapy.html  index.html  index.rst
docs/gachapy/: controller.html  loader.html  objects.html
docs/modules/: gachapy.controller.rst  gachapy.keylang.rst  gachapy.loader.rst  gachapy.objects.rst  gachapy.rst
examples/: example.py  example_banners.json  example_items.json  example_players.json  example_program.py  example_save.json
gachapy/: __init__.py  controller.py  gachapy.py  keylang.py  loader.py  objects.py
html/gachapy/: controller.html  index.html  loader.html  objects.html
src/: controller.py  gachapy.py  loader.py  objects.py  test.py
tests/: keyland_demo.py  test.py  test_controller.py  test_keylang.py  test_objects.py
