[metadata]
name = gachapy
version = 0.0.14
author = Jacob Kerr
author_email = jck268@cornell.edu
description = A gacha engine built in Python for developing gacha games
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jakejack13/gachapy
project_urls =
    Bug Tracker = https://github.com/jakejack13/gachapy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6